# rusty-networks

./: .gitignore  Cargo.toml  README.md  test.rn
mnist/: mnist.py
neurals/: 2convolve-40hidden-adam-relu.rn  40-10000-5.rn  57acc.rn  81acc.rn  85acc.rn  86acc.rn  configtesting.rn  newkernel.rn  savingjustincase.rn  softmax.rn  softmax10-newloss.rn  softmax10-newloss1.rn  softmax10.rn
src/: config.rs  convolution.rs  layer.rs  lib.rs  main.rs  network.rs  node.rs  optimizers.rs  utils.rs
