[package]
name = "rustynetworks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.0"
rand = "0.8.4"
indicatif = {version = "*", features = ["rayon"]}
serde = {version = "1.0.116", features = ["derive"]}
bincode = "1.3.1"

[[bin]]
name = "main"
path = "src/main.rs"